--- a/ee/app/views/groups/sidebar/_security_dashboard.html.haml
+++ b/ee/app/views/groups/sidebar/_security_dashboard.html.haml
@@ -1,4 +1,4 @@
 - if can?(current_user, :read_group_security_dashboard, @group)
-  = nav_link(path: 'groups/security/dashboard#show') do
+  = group_view_nav_link(group_view: :security_dashboard, path: 'groups/security/dashboard#show') do
     = link_to group_security_dashboard_path(@group), title: _('Security Dashboard') do
       %span= _('Security Dashboard')
