Switched utility classes where possible instead of CSS
- In some places it doesn't make sense to rely on utility classes
(either suitable class doesn't exist and it doesn't make sense to
create one or the change is very specific to a particular usecase)
- Manually prettifying note_actions.vue

Update RSpec fixture with the new markup for .note-actions

--- a/app/views/shared/notes/_note.html.haml
+++ b/app/views/shared/notes/_note.html.haml
@@ -28,10 +28,10 @@
               %span.badge.badge-pill{ class: badge_class }
                 = counter
     .timeline-content
-      .note-header
+      .d-flex.flex-column.justify-content-between.flex-md-row.note-header
         .note-header-info
           %a{ href: user_path(note.author) }
-            %span.note-header-author-name
+            %span.d-none.d-sm-inline.note-header-author-name
               = sanitize(note.author.name)
             = user_status(note.author)
             %span.note-headline-light
@@ -45,7 +45,7 @@
                 &middot;
               %a.system-note-separator{ href: "##{dom_id(note)}" }= time_ago_with_tooltip(note.created_at, placement: 'bottom', html_class: 'note-created-ago')
         - unless note.system?
-          .note-actions
+          .note-actions.d-flex.align-self-start.flex-shrink-0.justify-content-end.d-md-inline-flex.align-items-md-center
             - if note.for_personal_snippet?
               = render 'snippets/notes/actions', note: note, note_editable: note_editable
             - else
