Add check for Group Overview default prefs item

--- a/ee/app/views/profiles/preferences/_group_overview_selector.html.haml
+++ b/ee/app/views/profiles/preferences/_group_overview_selector.html.haml
@@ -1,3 +1,5 @@
+- return unless security_dashboard_feature_available?
+
 .form-group
   = f.label :group_view, class: 'label-bold' do
     = _('Group overview content')
