--- a/app/assets/stylesheets/pages/reports.scss
+++ b/app/assets/stylesheets/pages/reports.scss
@@ -112,22 +112,11 @@
   display: flex;
   align-items: flex-start;
   align-content: flex-start;
-
-  ~ .is-dismissed {
-    border-top: 1px solid $gray-dark;
-    margin-top: $gl-padding-top;
-    padding-top: $gl-padding-top;
-  }
 }
 
-.is-dismissed {
-  opacity: .5;
-
-  + .is-dismissed {
-    border: 0;
-    margin: 0;
-    padding: 0;
-  }
+.is-dismissed .report-block-list-issue-description,
+.is-dismissed .vulnerability-name-button {
+  text-decoration: line-through;
 }
 
 .report-block-list-issue-description-text::after {
