Adding some JSDocs
Moving comments to be JSDocs instead.

Also used scss variables in a couple of spots.

--- a/ee/app/assets/stylesheets/pages/operations.scss
+++ b/ee/app/assets/stylesheets/pages/operations.scss
@@ -54,8 +54,8 @@
   }
 
   &-pipeline {
-    border-radius: 20.5px;
-    height: 32px;
+    border-radius: $gl-padding;
+    height: $gl-padding-32;
 
     &-failed {
       background-color: $red-100;
