--- a/app/views/projects/settings/operations/_error_tracking.html.haml
+++ b/app/views/projects/settings/operations/_error_tracking.html.haml
@@ -2,8 +2,8 @@
 
 - setting = error_tracking_setting
 
-%section.settings.expanded.border-0.no-animate
-  .settings-header
+%section.settings.expanded.no-animate
+  .settings-header.border-top
     %h4
       = _('Error Tracking')
     %p
