--- a/app/views/projects/settings/operations/show.html.haml
+++ b/app/views/projects/settings/operations/show.html.haml
@@ -1,5 +1,6 @@
 - @content_class = 'limit-container-width' unless fluid_layout
 - page_title _('Operations')
 
+= render_if_exists 'projects/settings/operations/incidents'
 = render 'projects/settings/operations/error_tracking', expanded: true
 = render_if_exists 'projects/settings/operations/tracing'
