--- a/ee/app/views/shared/_gold_trial_callout.html.haml
+++ b/ee/app/views/shared/_gold_trial_callout.html.haml
@@ -1,4 +1,4 @@
-- if show_gold_trial? && user_default_dashboard?
+- if show_gold_trial?(current_user) && user_default_dashboard?(current_user) && has_no_trial_or_gold_plan?(current_user)
   .pt-1.d-none.d-md-block{ class: container_class }
     .user-callout.promotion-callout.thin-callout.js-gold-trial-callout{ data: { uid: 'trial_callout_dismissed', feature_id: UserCalloutsHelper::GOLD_TRIAL, dismiss_endpoint: user_callouts_path } }
       .bordered-box.justify-content-left.align-items-center
