--- a/app/views/dashboard/projects/starred.html.haml
+++ b/app/views/dashboard/projects/starred.html.haml
@@ -4,7 +4,7 @@
 - page_title "Starred Projects"
 - header_title "Projects", dashboard_projects_path
 
-= render_if_exists "shared/gold_trial_callout"
+= render_dashboard_gold_trial
 
 %div{ class: container_class }
   = render "projects/last_push"
