--- a/ee/app/views/projects/services/prometheus/_metrics.html.haml
+++ b/ee/app/views/projects/services/prometheus/_metrics.html.haml
@@ -2,10 +2,9 @@
 
 .card.custom-monitored-metrics.js-panel-custom-monitored-metrics{ data: { active_custom_metrics: project_prometheus_metrics_path(project), environments_data: environments_list_data, service_active: "#{@service.active}" } }
   .card-header
-    %h3.card-title
-      = s_('PrometheusService|Custom metrics')
-      %span.badge.badge-pill.js-custom-monitored-count 0
-      = link_to s_('PrometheusService|New metric'), new_project_prometheus_metric_path(project), class: 'btn btn-success js-new-metric-button hidden'
+    = s_('PrometheusService|Custom metrics')
+    %span.badge.badge-pill.js-custom-monitored-count 0
+    = link_to s_('PrometheusService|New metric'), new_project_prometheus_metric_path(project), class: 'btn btn-success float-right js-new-metric-button hidden'
   .card-body
     .flash-container.hidden
       .flash-warning
@@ -17,7 +16,6 @@
     .empty-metrics.hidden.js-empty-custom-metrics
       %p.text-tertiary.prepend-top-10.prepend-left-10.js-no-active-integration-text.hidden
         = s_('PrometheusService|Enable Prometheus to define custom metrics, using either option above')
-      = link_to s_('PrometheusService|New metric'), new_project_prometheus_metric_path(project), class: 'btn btn-success prepend-top-10 prepend-left-10 append-bottom-10 js-new-metric-body-button hidden'
     %ul.list-unstyled.metrics-list.hidden.js-custom-metrics-list
 
 = render_ce 'projects/services/prometheus/metrics', project: project
