--- a/ee/app/views/projects/_merge_request_approvals_settings.html.haml
+++ b/ee/app/views/projects/_merge_request_approvals_settings.html.haml
@@ -2,13 +2,12 @@
 
 %section.settings.merge-requests-feature.no-animate#js-merge-request-approval-settings{ class: [('expanded' if expanded), ('hidden' if @project.project_feature.send(:merge_requests_access_level) == 0)] }
   .settings-header
-    %h4
-      = _("Merge request approvals")
-    %button.btn.js-settings-toggle{ type: 'button' }
-      = expanded ? _("Collapse") : _("Expand")
+    %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only= _("Merge request approvals")
+    %button.btn.js-settings-toggle{ type: 'button' }= expanded ? _("Collapse") : _("Expand")
     %p
-      = _("Customize your merge request approval settings.")
-      = link_to icon('question-circle'), help_page_path("user/project/merge_requests/merge_request_approvals"), target: '_blank'
+      = _("Set a number of approvals required, the approvers and other approval settings.")
+      = link_to _("Learn more about approvals."), help_page_path("user/project/merge_requests/merge_request_approvals"), target: '_blank'
+
   .settings-content
     = form_for [@project.namespace.becomes(Namespace), @project], remote: true, html: { class: "merge-request-approval-settings-form" }, authenticity_token: true do |f|
       %input{ name: 'update_section', type: 'hidden', value: 'js-merge-request-approval-settings' }
