--- a/ee/app/views/projects/_service_desk_settings.html.haml
+++ b/ee/app/views/projects/_service_desk_settings.html.haml
@@ -2,10 +2,9 @@
   - expanded = Rails.env.test?
   %section.settings.js-service-desk-setting-wrapper.no-animate#js-service-desk{ class: ('expanded' if expanded) }
     .settings-header
-      %h4
-        Service Desk
+      %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only= _('Service Desk')
       %button.btn.js-settings-toggle
-        = expanded ? 'Collapse' : 'Expand'
+        = expanded ? _('Collapse') : _('Expand')
       %p
         Customize your service desk settings.
         = link_to "Learn more about service desk.", help_page_path('user/project/service_desk'), target: '_blank'
